Affichage des adresses

--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
 		"vitest": "^3.0.0"
 	},
 	"dependencies": {
+		"@mdi/js": "^7.4.47",
 		"@sveltejs/adapter-auto": "^6.0.0",
+		"mdi-svelte-ts": "^1.0.0",
 		"mdsvex": "^0.12.5",
 		"node-mailjet": "^6.0.8",
 		"svelte-french-toast": "^2.0.0-alpha.0"
